# lcc

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  P04_SP08_AUDIT_REPORT.md  P05_SP09_AUDIT_REPORT.md  P06_SP01_AUDIT_REPORT.md  README.md  SECURITY.md  SESSION_STATUS.md  SP01_AUDIT_REPORT.md  SP01_FRONTEND_AUDIT_REPORT.md  SP02_AUDIT_REPORT.md  SP03_AUDIT_REPORT.md  SP03_STOREFRONT_CATALOG_AUDIT_REPORT.md  SP04_AUDIT_REPORT.md  SP05_AUDIT_REPORT.md  SP06_AUDIT_REPORT.md  SP06_FRONTEND_AUTH_AUDIT_REPORT.md  SP07_AUDIT_REPORT.md  SP07_DASHBOARD_LAYOUT_AUDIT_REPORT.md  SP08_AUDIT_REPORT.md  SP08_FRONTEND_AUDIT_REPORT.md  SP08_SP07_CHECKOUT_AUDIT_REPORT.md  SP08_SP10_THEME_ENGINE_AUDIT_REPORT.md  SP09_AUDIT_REPORT.md  SP09_CUSTOMER_PORTAL_AUDIT_REPORT.md  SP09_INVENTORY_UI_AUDIT_REPORT.md  SP09_JOURNAL_ENTRIES_AUDIT_REPORT.md  SP10_AUDIT_REPORT.md  SP11_AUDIT_REPORT.md  SP11_STATIC_PAGES_CMS_AUDIT_REPORT.md  (+12 more)
backend/: .dockerignore  .env.example  .flake8  Procfile  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini
backend/apps/: __init__.py
backend/apps/accounting/: __init__.py  admin.py  apps.py  constants.py  signals.py  tasks.py  urls.py
backend/apps/analytics/: __init__.py  admin.py  apps.py  enums.py  tasks.py
backend/apps/attendance/: admin.py  apps.py  constants.py  consumers.py  filters.py  urls.py
backend/apps/attributes/: README.md  admin.py  apps.py  constants.py  serializers.py  urls.py  views.py
backend/apps/authentication/: apps.py  urls.py  views.py
backend/apps/core/: README.md  __init__.py  admin.py  apps.py  managers.py  mixins.py  models.py  signals.py  tests.py  urls.py  views.py
backend/apps/credit/: README.md  __init__.py  admin.py  apps.py  constants.py  filters.py  signals.py  urls.py
backend/apps/customers/: __init__.py  admin.py  apps.py  constants.py  filters.py  urls.py  validators.py
backend/apps/dashboard/: __init__.py  admin.py  apps.py  signals.py  tasks.py  urls.py
backend/apps/employees/: __init__.py  apps.py  constants.py  filters.py  signals.py  urls.py
backend/apps/hr/: __init__.py  apps.py  constants.py
backend/apps/integrations/: __init__.py  apps.py
backend/apps/inventory/: __init__.py  admin.py  apps.py  constants.py
backend/apps/invoices/: admin.py  apps.py  constants.py  exceptions.py  filters.py  urls.py
backend/apps/leave/: __init__.py  admin.py  apps.py  constants.py  filters.py  urls.py
backend/apps/orders/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  filters.py  urls.py
backend/apps/organization/: README.md  apps.py  constants.py  filters.py  signals.py  urls.py  validators.py
backend/apps/payments/: README.md  admin.py  apps.py  constants.py  exceptions.py  filters.py  urls.py
backend/apps/payroll/: README.md  admin.py  apps.py  constants.py  filters.py  signals.py  urls.py
backend/apps/payslip/: admin.py  apps.py  constants.py  tasks.py  urls.py
backend/apps/platform/: __init__.py  admin.py  apps.py  backends.py  tests.py  urls.py  views.py
backend/apps/pos/: __init__.py  admin.py  apps.py  constants.py  consumers.py  routing.py  urls.py
backend/apps/products/: README.md  __init__.py  admin.py  apps.py  constants.py  signals.py  tasks.py
backend/apps/purchases/: __init__.py  admin.py  apps.py  constants.py  signals.py  urls.py
backend/apps/quotes/: __init__.py  admin.py  apps.py  constants.py  filters.py  urls.py
backend/apps/reports/: __init__.py  apps.py
backend/apps/sales/: __init__.py  apps.py  constants.py
backend/apps/tenants/: __init__.py  admin.py  apps.py  managers.py  models.py  routers.py  signals.py  tests.py  views.py
backend/apps/users/: __init__.py  admin.py  apps.py  decorators.py  models.py  tests.py  views.py
backend/apps/vendor_bills/: __init__.py  admin.py  apps.py  constants.py  signals.py  urls.py
backend/apps/vendors/: __init__.py  admin.py  apps.py  constants.py  filters.py  signals.py  urls.py
backend/apps/webstore/: __init__.py  apps.py
backend/config/: __init__.py  asgi.py  celery.py  env.py  urls.py
backend/config/settings/: __init__.py  api_docs.py  base.py  cache.py  celery_settings.py  database.py  local.py  local_sqlite.py  production.py  sentry.py  storage.py  test.py  test_pg.py
backend/docs/: tax_reporting_api.md
backend/docs/api/: dashboard-kpis.md
backend/docs/api_docs/: decorators.md  extensions.md
backend/docs/caching/: invalidation.md  overview.md  patterns.md  performance.md
backend/docs/celery/: configuration.md  monitoring.md  task_creation.md
backend/docs/exceptions/: api_error_guide.md  error_codes_reference.md  sentry.md  troubleshooting.md  verification.md
backend/docs/storage/: api.md  configuration.md  overview.md  performance.md
backend/requirements/: base.in  base.txt  local.in  local.txt  production.in  production.txt  test.in  test.txt
backend/scripts/: verify_api_docs.py  verify_sp12.py
backend/static/api_docs/: custom.css
backend/templates/accounting/: reconciliation_report.html
backend/templates/emails/: tax_filing_reminder.html
backend/tests/: __init__.py  conftest.py
backend/tests/accounting/: conftest.py  test_admin_serializers.py  test_api.py  test_default_coa.py  test_journal_entry.py  test_models.py  test_reconciliation.py  test_reports.py  test_services.py  test_tax_reporting.py
backend/tests/analytics/: conftest.py  test_api.py  test_generators.py  test_models.py  test_scheduler.py
backend/tests/attendance/: conftest.py  test_api.py  test_models.py  test_services.py
backend/tests/attributes/: __init__.py  conftest.py  test_api.py  test_integration.py  test_models.py
backend/tests/core/: conftest.py  test_api_docs.py  test_api_framework.py  test_apps_structure.py  test_base_models.py  test_cache.py  test_core_middleware.py  test_datetime.py  test_error_logging.py  test_exception_handling.py  test_exceptions.py  test_filters.py  test_handlers.py  test_integration.py  test_pagination.py  test_response.py  (+6 more)
(+3596 files in other folders)
