# =============================================================================
# LankaCommerce Cloud - Backend Python Project Configuration
# =============================================================================
# This file follows PEP 518 and PEP 621 specifications for modern Python
# project configuration. It replaces the legacy setup.py / setup.cfg approach.
# =============================================================================

# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# -----------------------------------------------------------------------------
# Project Metadata
# -----------------------------------------------------------------------------
[project]
name = "lankacommerce-backend"
version = "0.1.0"
description = "LankaCommerce Cloud Backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "LCC Team" }]

[project.urls]
Homepage = "https://github.com/lankacommerce/pos"
Documentation = "https://github.com/lankacommerce/pos/tree/main/docs"
Repository = "https://github.com/lankacommerce/pos"
Issues = "https://github.com/lankacommerce/pos/issues"

# -----------------------------------------------------------------------------
# Tool Configuration: Black (Code Formatter)
# -----------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

# Exclude patterns (extend-exclude preserves Black's sensible defaults)
extend-exclude = '''
/(
    # Version control
    \.git
    | \.hg

    # Virtual environments
    | \.venv
    | venv
    | env

    # Cache directories
    | __pycache__
    | \.pytest_cache
    | \.mypy_cache

    # Build outputs
    | build
    | dist
    | \.eggs
    | .*\.egg-info

    # Django generated files
    | migrations

    # IDE directories
    | \.idea
    | \.vscode

    # Coverage reports
    | htmlcov
    | \.coverage
)/
'''

# -----------------------------------------------------------------------------
# Tool Configuration: isort (Import Sorter)
# -----------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 88
known_django = ["django"]
known_first_party = ["apps", "config", "core", "utils"]
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# Skip directories
skip = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "migrations",
]

skip_glob = [
    "**/migrations/*",
    "**/venv/*",
]

# Blank line configuration
lines_between_types = 1
lines_after_imports = 2

# -----------------------------------------------------------------------------
# Tool Configuration: Ruff (Fast Python Linter)
# -----------------------------------------------------------------------------
[tool.ruff]
# Target Python version
target-version = "py312"

# Line length (must match Black)
line-length = 88

# Fix auto-fixable issues
fix = true

# Show fixes in output
show-fixes = true

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "*.egg-info",
    "migrations",
    ".idea",
    ".vscode",
]

[tool.ruff.lint]
# Select linting rules
select = [
    "F",    # Pyflakes - Error detection
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort - Import sorting
    "B",    # flake8-bugbear - Bug detection
    "C4",   # flake8-comprehensions - Comprehension improvements
    "UP",   # pyupgrade - Upgrade syntax
    "SIM",  # flake8-simplify - Simplifications
    "PLC",  # Pylint conventions
    "PLE",  # Pylint errors
    "PLR",  # Pylint refactor
    "PLW",  # Pylint warnings
]

# Ignore rules that conflict with Black or are too strict
ignore = [
    "E501",     # Line too long (Black handles this)
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value comparison
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

# Allow certain confusables
[tool.ruff.lint.flake8-bugbear]

[tool.ruff.lint.isort]
# Known first party packages (mirror isort config)
known-first-party = ["apps", "config", "core", "utils"]

# -----------------------------------------------------------------------------
# Tool Configuration: pytest (Testing)
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# -----------------------------------------------------------------------------
# Tool Configuration: mypy (Type Checking)
# -----------------------------------------------------------------------------
# NOTE: Primary mypy configuration is in mypy.ini for full configuration
# support including per-module overrides. This section kept for reference.
[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
strict = true
show_error_codes = true
pretty = true
show_column_numbers = true

[tool.django-stubs]
django_settings_module = "config.settings.base"

# -----------------------------------------------------------------------------
# Tool Configuration: Coverage (Test Coverage)
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["apps", "core"]
omit = ["*/migrations/*", "*/tests/*"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
